--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<h1>si</h1>
+<!-- <h1>si</h1>
 <hr>
 
-<app-counter></app-counter>  
+<app-counter></app-counter>
   <app-heros-hero></app-heros-hero>
-<app-heroes-list></app-heroes-list>
+<app-heroes-list></app-heroes-list> -->
+
+
+<app-dbz-main-page> </app-dbz-main-page>
+ 
